Gnome 43: Fix double borders in context menus

--- a/gtk-4.0/gtk-dark.css
+++ b/gtk-4.0/gtk-dark.css
@@ -2777,7 +2777,6 @@ menu, .menu, .context-menu {
   margin: 4px;
   padding: 2px 0px;
   background: linear-gradient(to bottom, #1a1d2b, #12151f);
-  border: 1px solid #090a0f;
   border-radius: 5px; }
   .csd menu,
   .csd .menu,
